--- a/pravilnoevipolnenie.html
+++ b/pravilnoevipolnenie.html
@@ -44,23 +44,23 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-font-ubuntu u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="Главная.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Главная</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="Тренировки-дома.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Тренировки дома</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="Как-выполнять.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Правильное выполнение</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="Что-нужно-знать-новичкам.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Советы новичкам</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="Отзывы.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Оставить отзыв</a>
-</li></ul>
-          </div>
-          <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Главная.html" style="padding: 54px 72px;">Главная</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Тренировки-дома.html" style="padding: 54px 72px;">Тренировки дома</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-выполнять.html" style="padding: 54px 72px;">Правильное выполнение</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Что-нужно-знать-новичкам.html" style="padding: 54px 72px;">Советы новичкам</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы.html" style="padding: 54px 72px;">Оставить отзыв</a>
-</li></ul>
+            <ul class="u-custom-font u-font-ubuntu u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="index.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Главная</a>
+            </li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="Trenirovkidoma.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Тренировки дома</a>
+            </li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="pravilnoevipolnenie.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Правильное выполнение</a>
+            </li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="sovetynovichkam.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Советы новичкам</a>
+            </li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-white u-text-hover-white u-text-palette-1-dark-3" href="ostavitotzyv.html" style="padding: 10px 20px; text-shadow: -2px 2px 8px rgba(128,128,128,1);">Оставить отзыв</a>
+            </li></ul>
+                      </div>
+                      <div class="u-custom-menu u-nav-container-collapse">
+                        <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+                          <div class="u-sidenav-overflow">
+                            <div class="u-menu-close"></div>
+                            <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html" style="padding: 54px 72px;">Главная</a>
+            </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Trenirovkidoma.html" style="padding: 54px 72px;">Тренировки дома</a>
+            </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="pravilnoevipolnenie.html" style="padding: 54px 72px;">Правильное выполнение</a>
+            </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="sovetynovichkam.html" style="padding: 54px 72px;">Советы новичкам</a>
+            </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="ostavitotzyv.html" style="padding: 54px 72px;">Оставить отзыв</a>
+            </li></ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
